--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <main>
         <div class="part welcome">
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Contact</a>
+                <a href="./">Home</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
             </nav>
             <div class="josephine">
                 <h1>Josephine Thomas</h1>
